portraitPhoneRotateMessage bugfix on iphone

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h2 {
   font-size: 28px;
   letter-spacing: 3px;
   text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
-  margin: 5px 5px 5px 5px;
+  margin: 5px 0px 5px 0px;
 }
 
 :fullscreen {
